--- a/client/src/components/Header/Header.sass
+++ b/client/src/components/Header/Header.sass
@@ -1,5 +1,4 @@
 @import '../../variables/style'
-@import './__auth-block/Header__auth-block'
     
 .Header
     position: relative
@@ -19,6 +18,7 @@
 
 .Header__logo
     height: 36px
+    cursor: pointer
 
 .Header__username
     color: white
