--- a/client/src/components/Header/Header.sass
+++ b/client/src/components/Header/Header.sass
@@ -1,4 +1,5 @@
 @import '../../variables/style'
+@import './__auth-block/Header__auth-block'
     
 .Header
     position: relative
@@ -18,7 +19,6 @@
 
 .Header__logo
     height: 36px
-    cursor: pointer
 
 .Header__username
     color: white
