pagination component renamed to pageswitcher

--- a/client/src/components/PageSwitcher/PageSwitcher.sass
+++ b/client/src/components/PageSwitcher/PageSwitcher.sass
@@ -1,9 +1,9 @@
-.Pagination
+.PageSwitcher
     display: flex
     margin: 15px auto
     justify-content: center
 
-.Pagination__button
+.PageSwitcher__button
     margin: 0 3px
     background-color: rgba(0, 0, 0, 0)
     border: none
@@ -16,23 +16,23 @@
     transition: .3s ease
     font-weight: 700
 
-.Pagination__button:hover
+.PageSwitcher__button:hover
     background-color: rgba(34, 36, 38, .15)
 
-.Pagination__button_active
+.PageSwitcher__button_active
     background-color: #2185d0
     color: white
     cursor: auto
 
-.Pagination__button_active:hover
+.PageSwitcher__button_active:hover
     background-color: #2185d0
     color: white
 
-.Pagination__button_disabled
+.PageSwitcher__button_disabled
     opacity: .4
     cursor: auto
 
-.Pagination__button_disabled:hover
+.PageSwitcher__button_disabled:hover
     opacity: .4
     cursor: auto
     background-color: rgba(0, 0, 0, 0)
