--- a/client/src/components/modals/MenuModal/MenuModal.sass
+++ b/client/src/components/modals/MenuModal/MenuModal.sass
@@ -16,6 +16,7 @@
     display: flex
     justify-content: space-between
     align-items: center
+    margin: 0 0 10px 0
     p
       margin: 0
   &__dropdown
@@ -26,6 +27,9 @@
     border: 1px solid #bbb
     border-radius: 4px
     cursor: pointer
+    display: flex
+    align-items: center
+    justify-content: center
   &__dropdown-wrp
     position: absolute
     width: 100%
@@ -37,6 +41,7 @@
     background-color: white
     border-radius: 4px
     box-shadow: 0px 12px 22px -9px rgba(0,0,0,0.36)
+    z-index: 10
   &__dropdown-option
     width: 100%
     height: 25px
